--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.2.0",
-    "react-native": "0.52.0"
+    "react-native": "0.52.0",
+    "react-native-windows": "0.52.0-rc.0"
   },
   "devDependencies": {
     "babel-jest": "22.1.0",
